--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -134,9 +134,9 @@
 
     </style>
 </head>
-<body ng-app="adminApp">
+<body ng-app="forumApp">
     
-    <div id="mainWrapper" class="container-fluid" ng-controller="AdminController as Admin" ng-init="onload()">
+    <div id="mainWrapper" class="container-fluid" ng-controller="AdminController as admin" ng-init="onload()">
 
         <header class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: transparent !important;">
@@ -197,7 +197,7 @@
 
     <script src="https://cdn.ckeditor.com/4.12.1/standard/ckeditor.js"></script>
 
-    <script src="../admin_app.js"></script>
+    <script src="../app.js"></script>
 
 </body>
 </html>
